partial/force-app/main/default/objects/Reapit_Image__c/Reapit_Image__c.object-meta.xml
<CustomObject>
    <label>Reapit File</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reapit Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>