partial/force-app/main/default/objects/Reapit_Image__c/fields/eTag__c.field-meta.xml
<CustomField>
    <fullName>eTag__c</fullName>
    <externalId>true</externalId>
    <label>eTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>