partial/force-app/main/default/objects/Reapit_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(NOT(ISBLANK( Image_Url__c )),IMAGE(Image_Url__c, &apos;Image&apos;, 200, 200),&quot;No Image Is Captured&quot;)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>