partial/force-app/main/default/objects/Reapit_Image__c/fields/Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Image_Url__c</fullName>
    <label>Image Url</label>
    <type>Url</type>
</CustomField>