partial/force-app/main/default/objects/Reapit_Image__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <label>Links</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>