partial/force-app/main/default/objects/Reapit_Image__c/fields/Reapit_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reapit Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>