partial/force-app/main/default/objects/Reapit_Image__c/fields/Reapit_Image_Created__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Image_Created__c</fullName>
    <label>Reapit Image Created</label>
    <type>DateTime</type>
</CustomField>