partial/force-app/main/default/objects/Reapit_Image__c/fields/Reapit_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Image_Id__c</fullName>
    <label>Reapit Image Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>