partial/force-app/main/default/objects/Reapit_Image__c/fields/Reapit_Modified__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Modified__c</fullName>
    <label>Reapit Modified</label>
    <type>DateTime</type>
</CustomField>