partial/force-app/main/default/objects/Reapit_Image__c/fields/Reapit_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Property_Id__c</fullName>
    <label>Reapit Property Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>