partial/force-app/main/default/objects/Reapit_Image__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>epc</fullName>
            </value>
            <value>
                <fullName>floorPlan</fullName>
            </value>
            <value>
                <fullName>map</fullName>
            </value>
            <value>
                <fullName>photograph</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>